--- a/index.html
+++ b/index.html
@@ -79,26 +79,32 @@
 
               <div class="form-field">
                 <label class="form-field-label" for="name">Ім'я</label>
-                <input class="form-field-input" id="name" name="name" type="text" />
-                <svg class="icon-form" width="18" height="18">
-                  <use href="./images/icons.svg#icon-person-form"></use>
-                </svg>
+                <span class="form-input-span">
+                  <input class="form-field-input" id="name" name="name" type="text" />
+                  <svg class="icon-form" width="18" height="18">
+                    <use href="./images/icons.svg#icon-person-form"></use>
+                  </svg>
+                </span>
               </div>
 
               <div class="form-field">
                 <label class="form-field-label" for="phone">Телефон</label>
-                <input class="form-field-input" id="phone" type="tel" name="tel" />
-                <svg class="icon-form" width="18" height="18">
-                  <use href="./images/icons.svg#icon-phone-form"></use>
-                </svg>
+                <span class="form-input-span">
+                  <input class="form-field-input" id="phone" type="tel" name="tel" />
+                  <svg class="icon-form" width="18" height="18">
+                    <use href="./images/icons.svg#icon-phone-form"></use>
+                  </svg>
+                </span>
               </div>
 
               <div class="form-field">
                 <label class="form-field-label" for="mail">Пошта</label>
-                <input class="form-field-input" id="mail" type="email" name="email" />
-                <svg class="icon-form" width="18" height="18">
-                  <use href="./images/icons.svg#icon-mail-form"></use>
-                </svg>
+                <span class="form-input-span">
+                  <input class="form-field-input" id="mail" type="email" name="email" />
+                  <svg class="icon-form" width="18" height="18">
+                    <use href="./images/icons.svg#icon-mail-form"></use>
+                  </svg>
+                </span>
               </div>
 
               <div class="form-field">
